--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -6,10 +6,21 @@
 <body>
 <h1>sup world!</h1>
 <p>
-    this is {{ html_var }} coming through
+    this is <code>{% verbatim %}{{ html_var }}{% endverbatim %}</code> coming through
 </p>
 <p>
+{% if num is not None %}
     random numer is {{ num }}
+{% endif %}
 </p>
+<p>
+{% for some_item in some_list %}
+    {% if some_item|divisibleby:"2" %}
+        even number
+    {% endif %}
+    {{ some_item }}<br/>
+{% endfor %}
+</p>
+<p>some item is {{ some_item }}</p>
 </body>
 </html>
