--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -2,25 +2,17 @@
 <html lang=en>
 
 <head>
+<title>{% block head_title %}muypicky.com{% endblock head_title %}</title>
 </head>
 <body>
-<h1>sup world!</h1>
-<p>
-    this is <code>{% verbatim %}{{ html_var }}{% endverbatim %}</code> coming through
-</p>
-<p>
-{% if num is not None %}
-    random numer is {{ num }}
-{% endif %}
-</p>
-<p>
-{% for some_item in some_list %}
-    {% if some_item|divisibleby:"2" %}
-        even number
-    {% endif %}
-    {{ some_item }}<br/>
-{% endfor %}
-</p>
-<p>some item is {{ some_item }}</p>
+<h1>MuyPicky.com</h1>
+<a href='/'>home</a>
+<a href='/about/'>about</a>
+<a href='/contact/'>contact</a>
+<div class='container'>
+{% block content %}
+{% endblock content %}
+</div>
+
 </body>
 </html>
