--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -3,16 +3,15 @@
 
 <head>
 <title>{% block head_title %}muypicky.com{% endblock head_title %}</title>
+{% include 'snippets/css.html' %}
 </head>
 <body>
-<h1>MuyPicky.com</h1>
-<a href='/'>home</a>
-<a href='/about/'>about</a>
-<a href='/contact/'>contact</a>
+{% include 'snippets/nav.html' %}
 <div class='container'>
 {% block content %}
 {% endblock content %}
 </div>
 
+{% include 'snippets/css.html' %}
 </body>
 </html>
